# ComikNet-BE

./: Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: rust-clippy.yml  sonarcloud.yml
config/: default.json
src/: app.rs  context.rs  database.rs  errors.rs  lib.rs  logger.rs  main.rs  setting.rs
src/api/: openapi.rs
src/routes/: mod.rs  status.rs
src/routes/apis/: mod.rs
